# nu_plugin_file_dialog

./: Cargo.toml  README.md
src/: main.rs
