[package]
name = "nu_plugin_file_dialog"
repository = "https://github.com/Tyarel8/nu_plugin_file_dialog"
description = "A simple nu plugin to select files through the native dialog."
license = "MIT"
version = "0.10.0"
edition = "2021"

[dependencies]
native-dialog = "0.7.0"
nu-plugin = "0.100.0"
nu-protocol = "0.100.0"

[target.'cfg(windows)'.dependencies]
native-dialog = { version = "0.7.0", features = [
  "windows_dpi_awareness",
  "windows_visual_styles",
] }
